tests/error/lessThanInteger-wrong-1st-argument-bool.uplc
(program 1.0.0[[(builtin lessThanInteger)(con bool True)](con integer 10)])